# otus_cpp_2

./: CMakeLists.txt  build.sh  ip_filter.cpp
.github/workflows/: cmake-single-platform.yml  release.yml
